# ModelProbe

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  pages.yml  publish.yml
benchmarks/: run_benchmark.py  test_cases.json
benchmarks/results/: codegemma_7b.json  comparison.json  gemma3_4b.json  llama3.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: Card.tsx  PassRateBar.tsx  StatusBadge.tsx
dashboard/src/pages/: CompareView.tsx  Landing.tsx  Overview.tsx  Playground.tsx  RunDetail.tsx  SuiteDetail.tsx  SuiteList.tsx
modelprobe/: __init__.py  cli.py  config.py  suite.py  trace.py
modelprobe/evaluators/: __init__.py  contains.py  exact.py  hallucination.py  json_schema.py  llm_judge.py  regex.py  similarity.py  toxicity.py
modelprobe/models/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
modelprobe/server/: __init__.py  main.py
modelprobe/server/db/: __init__.py  database.py  models.py
modelprobe/server/models/: schemas.py
modelprobe/server/routes/: evaluate.py  health.py  runs.py  suites.py
modelprobe/storage/: __init__.py  api_client.py  router.py  sqlite.py
tests/: conftest.py  test_api.py  test_evaluators.py  test_suite.py  test_trace.py  test_trace_nested.py
tests/regression/: test_api_contracts.py  test_evaluator_contracts.py  test_suite_contracts.py
tests/security/: test_api_security.py  test_input_validation.py  test_sql_injection.py
tests/unit/: conftest.py  test_api.py  test_cli.py  test_config.py  test_evaluate_api.py  test_evaluators.py  test_hallucination.py  test_similarity.py  test_storage_router.py  test_storage_sqlite.py  test_suite.py  test_toxicity.py  test_trace.py  test_trace_nested.py
(+3 files in other folders)
