[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelprobe"
version = "0.1.0"
description = "Production-grade AI system evaluation and regression testing platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ModelProbe Contributors" }]
requires-python = ">=3.10"
keywords = ["ai", "llm", "evaluation", "testing", "regression", "tracing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "sqlalchemy>=2.0",
  "httpx>=0.24",
  "pydantic>=2.0",
  "jsonschema>=4.0",
  "click>=8.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "alembic>=1.13",
  "aiosqlite>=0.19",
  "greenlet>=3.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.24",
  "respx>=0.20",
]

[project.scripts]
modelprobe = "modelprobe.cli:main"

[project.urls]
Homepage = "https://github.com/KamalasankariS/ModelProbe"
Documentation = "https://github.com/KamalasankariS/ModelProbe#readme"
"Bug Tracker" = "https://github.com/KamalasankariS/ModelProbe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelprobe*"]

[tool.setuptools.package-data]
modelprobe = ["server/static/**/*", "server/static/dist/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:aiosqlite",
]
